--- a/Instagram Sidebar Coding/index.html
+++ b/Instagram Sidebar Coding/index.html
@@ -1,86 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="zh-Hant-TW">
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Instagram</title>
     <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+            rel="stylesheet"
+            href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+</head>
+<body>
 
-    <aside class="sidebar">
-      <header class="sidebar-header">
-        <img class="logo-img" src="logo.svg" />
-        <i class="logo-icon uil uil-instagram"></i>
-      </header>
-      <nav>
+<aside class="sidebar">
+<!--    <header class="sidebar-header">-->
+<!--        <img class="logo-img" src="img/LibraryBarLogo.jpg" alt="Library Bar Logo"/>-->
+<!--        <i class="logo-icon uil uil-instagram"></i>-->
+<!--    </header>-->
+    <nav>
 
         <button>
           <span>
-            <i class="uil uil-estate"></i>
-            <span>Home</span>
+<!--            <i class="uil uil-search"></i>-->
+            <img class="logo-img" src="img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+
+              <span>Search</span>
           </span>
         </button>
 
         <button>
           <span>
-            <i class="uil uil-search"></i>
-            <span>Search</span>
+            <img class="logo-img" src="img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+
+            <span>Feed</span>
           </span>
         </button>
 
         <button>
           <span>
-            <i class="uil uil-compass"></i>
-            <span>Explore</span>
+            <img class="logo-img" src="img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+<!--            <i class="uil uil-compass"></i>-->
+            <span>Store</span>
           </span>
         </button>
 
         <button>
           <span>
-            <i class="uil uil-location-arrow">
-              <span>12</span>
-            </i>
-            <span>Messages</span>
-          </span>
-        </button>
+            <img class="logo-img" src="img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
 
-        <button>
-          <span>
-            <i class="uil uil-heart">
-              <em></em>
-            </i>
-            <span>Notifications</span>
-          </span>
-        </button>
-
-        <button>
-          <span>
-            <i class="uil uil-plus-circle"> </i>
-            <span>Create</span>
-          </span>
-        </button>
-
-        <button>
-          <span>
-            <img src="Profile.svg" />
             <span>Profile</span>
           </span>
         </button>
 
         <button>
           <span>
-            <i class="uil uil-bars"> </i>
-            <span>More</span>
+            <img class="logo-img" src="img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+
+            <span>Bookshelf</span>
+          </span>
+    </button>
+
+<!--        <button>-->
+<!--          <span>-->
+<!--            <i class="uil uil-location-arrow">-->
+<!--              <span>12</span>-->
+<!--            </i>-->
+<!--            <span>Bookshelf</span>-->
+<!--          </span>-->
+<!--        </button>-->
+
+        <!--        <button>-->
+        <!--          <span>-->
+        <!--            <i class="uil uil-heart">-->
+        <!--              <em></em>-->
+        <!--            </i>-->
+        <!--            <span>Notifications</span>-->
+        <!--          </span>-->
+        <!--        </button>-->
+
+        <!--        <button>-->
+        <!--          <span>-->
+        <!--            <i class="uil uil-plus-circle"> </i>-->
+        <!--            <span>Create</span>-->
+        <!--          </span>-->
+        <!--        </button>-->
+
+
+        <button>
+          <span>
+            <img class="logo-img" src="img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
+
+            <span>Settings</span>
           </span>
         </button>
-      </nav>
-    </aside>
+    </nav>
+</aside>
 
-  </body>
+</body>
 </html>
