--- a/Instagram Sidebar Coding/index.html
+++ b/Instagram Sidebar Coding/index.html
@@ -13,14 +13,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
 
 <aside class="sidebar">
-<!--    <header class="sidebar-header">-->
-<!--        <img class="logo-img" src="img/LibraryBarLogo.jpg" alt="Library Bar Logo"/>-->
-<!--        <i class="logo-icon uil uil-instagram"></i>-->
-<!--    </header>-->
+    <!--    <header class="sidebar-header">-->
+    <!--        <img class="logo-img" src="img/LibraryBarLogo.jpg" alt="Library Bar Logo"/>-->
+    <!--        <i class="logo-icon uil uil-instagram"></i>-->
+    <!--    </header>-->
     <nav>
 
         <button>
@@ -43,7 +45,7 @@
         <button>
           <span>
             <img class="logo-img" src="img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-<!--            <i class="uil uil-compass"></i>-->
+              <!--            <i class="uil uil-compass"></i>-->
             <span>Store</span>
           </span>
         </button>
@@ -62,16 +64,16 @@
 
             <span>Bookshelf</span>
           </span>
-    </button>
+        </button>
 
-<!--        <button>-->
-<!--          <span>-->
-<!--            <i class="uil uil-location-arrow">-->
-<!--              <span>12</span>-->
-<!--            </i>-->
-<!--            <span>Bookshelf</span>-->
-<!--          </span>-->
-<!--        </button>-->
+        <!--        <button>-->
+        <!--          <span>-->
+        <!--            <i class="uil uil-location-arrow">-->
+        <!--              <span>12</span>-->
+        <!--            </i>-->
+        <!--            <span>Bookshelf</span>-->
+        <!--          </span>-->
+        <!--        </button>-->
 
         <!--        <button>-->
         <!--          <span>-->
@@ -99,6 +101,29 @@
         </button>
     </nav>
 </aside>
+
+<div class="main">
+    <div class="flex bg-[#D8CCAE] rounded-lg p-4 max-h-96">
+
+        <div class="w-3/4 p-4 grid grid-cols-1 gap-4 content-normal">
+            <div class="text-2xl font-semibold">繼續閱讀：鈴芽之旅</div>
+            <div class="text-lg">150 / 324 頁</div>
+            <div class="bg-gradient-to-b from-gray-500 to-[#D8CCAE] inline-block text-transparent bg-clip-text text-base">
+                十七歲的少女鈴芽和阿姨住在九州靜謐的海港城鎮。某天上學途中，鈴芽與一名俊美的青年擦身而過。想要前往「廢墟」的青年，說著他在「尋找門」。鈴芽追著他，來到了山中的廢墟，在那裡的只有一扇陳舊的白門，
+            </div>
+
+            <div class="bg-white hover:bg-slate-200 w-48 h-12 py-2 px-4 rounded-full text-center text-lg flex items-center justify-center">閱讀</div>
+        </div>
+
+        <div class="w-1/4 content-center flex items-center justify-center my-2">
+            <img class="object-contain rounded-md w-full md:w-4/5" src="img/Book_template.jpg" alt="Book"/>
+        </div>
+
+    </div>
+
+
+</div>
+
 
 </body>
 </html>
