Store全功能初版

--- a/Instagram Sidebar Coding/index.html
+++ b/Instagram Sidebar Coding/index.html
@@ -40,10 +40,10 @@
           </span>
         </button>
 
-        <button>
+        <button onclick="location.href='./Store.html'">
           <span>
             <img class="logo-img" src="img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
-<!--            <i class="uil uil-compass"></i>-->
+
             <span>Store</span>
           </span>
         </button>
@@ -100,8 +100,6 @@
     </nav>
 </aside>
 
-
-<div>123</div>
 
 </body>
 </html>
