--- a/Instagram Sidebar Coding/aa.html
+++ b/Instagram Sidebar Coding/aa.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Instagram</title>
 
-  <link href="./bootstrap.min.css" rel="stylesheet">
-  <script src="./bootstrap.bundle.min.js"></script>
-  <script src="./popper.min.js"></script>
-  <script src="./bootstrap.min.js"></script>
-  <script src="./jquery-3.6.4.min.js"></script>
-
+  <link href="./style/bootstrap.min.css" rel="stylesheet">
+  <script src="./scripts/bootstrap.bundle.min.js"></script>
+  <script src="./scripts/popper.min.js"></script>
+  <script src="./scripts/bootstrap.min.js"></script>
+  <script src="./scripts/jquery-3.6.4.min.js"></script>
+  <script src="./scripts/store.js"></script>
 
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="./style/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
