--- a/Instagram Sidebar Coding/index.html
+++ b/Instagram Sidebar Coding/index.html
@@ -1,105 +1,114 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Instagram</title>
-    <link
-            rel="stylesheet"
-            href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
-    />
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Index</title>
+
+  <link href="./style/bootstrap.min.css" rel="stylesheet">
+  <script src="./scripts/bootstrap.bundle.min.js"></script>
+  <script src="./scripts/popper.min.js"></script>
+  <script src="./scripts/bootstrap.min.js"></script>
+  <script src="./scripts/jquery-3.6.4.min.js"></script>
+  <script src="./scripts/store.js"></script>
+
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+  <link href="./style/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
 
-<aside class="sidebar">
-<!--    <header class="sidebar-header">-->
-<!--        <img class="logo-img" src="img/LibraryBarLogo.jpg" alt="Library Bar Logo"/>-->
-<!--        <i class="logo-icon uil uil-instagram"></i>-->
-<!--    </header>-->
+  <aside class="sidebar">
+    <!--    <header class="sidebar-header">-->
+    <!--        <img class="logo-img" src="img/LibraryBarLogo.jpg" alt="Library Bar Logo"/>-->
+    <!--        <i class="logo-icon uil uil-instagram"></i>-->
+    <!--    </header>-->
     <nav>
 
-        <button>
-          <span>
-<!--            <i class="uil uil-search"></i>-->
-            <img class="logo-img" src="img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
+      <button>
+        <span>
+          <!--            <i class="uil uil-search"></i>-->
+          <img class="logo-img" src="img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo" />
 
-              <span>Search</span>
-          </span>
-        </button>
+          <span>Search</span>
+        </span>
+      </button>
 
-        <button>
-          <span>
-            <img class="logo-img" src="img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+      <button>
+        <span>
+          <img class="logo-img" src="img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
 
-            <span>Feed</span>
-          </span>
-        </button>
+          <span>Feed</span>
+        </span>
+      </button>
 
-        <button onclick="location.href='./Store.html'">
-          <span>
-            <img class="logo-img" src="img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+      <button onclick="location.href='./Store.html'">
+        <span>
+          <img class="logo-img" src="img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
 
-            <span>Store</span>
-          </span>
-        </button>
+          <span>Store</span>
+        </span>
+      </button>
 
-        <button>
-          <span>
-            <img class="logo-img" src="img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+      <button>
+        <span>
+          <img class="logo-img" src="img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
 
-            <span>Profile</span>
-          </span>
-        </button>
+          <span>Profile</span>
+        </span>
+      </button>
 
-        <button>
-          <span>
-            <img class="logo-img" src="img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
+      <button>
+        <span>
+          <img class="logo-img" src="img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
 
-            <span>Bookshelf</span>
-          </span>
-    </button>
+          <span>Bookshelf</span>
+        </span>
+      </button>
 
-<!--        <button>-->
-<!--          <span>-->
-<!--            <i class="uil uil-location-arrow">-->
-<!--              <span>12</span>-->
-<!--            </i>-->
-<!--            <span>Bookshelf</span>-->
-<!--          </span>-->
-<!--        </button>-->
+      <!--        <button>-->
+      <!--          <span>-->
+      <!--            <i class="uil uil-location-arrow">-->
+      <!--              <span>12</span>-->
+      <!--            </i>-->
+      <!--            <span>Bookshelf</span>-->
+      <!--          </span>-->
+      <!--        </button>-->
 
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-heart">-->
-        <!--              <em></em>-->
-        <!--            </i>-->
-        <!--            <span>Notifications</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
+      <!--        <button>-->
+      <!--          <span>-->
+      <!--            <i class="uil uil-heart">-->
+      <!--              <em></em>-->
+      <!--            </i>-->
+      <!--            <span>Notifications</span>-->
+      <!--          </span>-->
+      <!--        </button>-->
 
-        <!--        <button>-->
-        <!--          <span>-->
-        <!--            <i class="uil uil-plus-circle"> </i>-->
-        <!--            <span>Create</span>-->
-        <!--          </span>-->
-        <!--        </button>-->
+      <!--        <button>-->
+      <!--          <span>-->
+      <!--            <i class="uil uil-plus-circle"> </i>-->
+      <!--            <span>Create</span>-->
+      <!--          </span>-->
+      <!--        </button>-->
 
 
-        <button>
-          <span>
-            <img class="logo-img" src="img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
+      <button>
+        <span>
+          <img class="logo-img" src="img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo" />
 
-            <span>Settings</span>
-          </span>
-        </button>
+          <span>Settings</span>
+        </span>
+      </button>
     </nav>
-</aside>
+  </aside>
 
 
 </body>
+
 </html>
