* Change Feed Page import * Merge Store.html * index.html will be website template * Add favicon to each page

--- a/Instagram Sidebar Coding/Store.html
+++ b/Instagram Sidebar Coding/Store.html
@@ -2,236 +2,241 @@
 <html lang="zh-Hant-TW">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Store</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Store</title>
 
-  <link href="./style/bootstrap.min.css" rel="stylesheet">
-  <script src="./scripts/bootstrap.bundle.min.js"></script>
-  <script src="./scripts/popper.min.js"></script>
-  <script src="./scripts/bootstrap.min.js"></script>
-  <script src="./scripts/jquery-3.6.4.min.js"></script>
-  <script src="./scripts/store.js"></script>
+    <link href="./style/bootstrap.min.css" rel="stylesheet">
+    <script src="./scripts/bootstrap.bundle.min.js"></script>
+    <script src="./scripts/popper.min.js"></script>
+    <script src="./scripts/bootstrap.min.js"></script>
+    <script src="./scripts/jquery-3.6.4.min.js"></script>
+    <script src="./scripts/store.js"></script>
 
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-  <link href="./style/style.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
+    <link href="./style/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-  <aside class="sidebar">
+<aside class="sidebar">
     <nav>
-      <button>
+        <button>
         <span>
-          <img class="logo-img" src="img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo" />
+          <img class="logo-img" src="img/search_FILL0_wght400_GRAD0_opsz48.svg" alt="Search Logo"/>
 
           <span>Search</span>
         </span>
-      </button>
+        </button>
 
-      <button>
+        <button>
         <span>
-          <img class="logo-img" src="img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
+          <img class="logo-img" src="img/feed_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
 
           <span>Feed</span>
         </span>
-      </button>
+        </button>
 
-      <button>
+        <button>
         <span>
-          <img class="logo-img" src="img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
+          <img class="logo-img" src="img/store_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
           <span>Store</span>
         </span>
-      </button>
+        </button>
 
-      <button>
+        <button>
         <span>
-          <img class="logo-img" src="img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
+          <img class="logo-img" src="img/face_5_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
 
           <span>Profile</span>
         </span>
-      </button>
+        </button>
 
-      <button>
+        <button>
         <span>
-          <img class="logo-img" src="img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo" />
+          <img class="logo-img" src="img/book_FILL0_wght400_GRAD0_opsz48.svg" alt="Feed Logo"/>
 
           <span>Bookshelf</span>
         </span>
-      </button>
-      <button>
+        </button>
+        <button>
         <span>
-          <img class="logo-img" src="img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo" />
+          <img class="logo-img" src="img/tune_FILL0_wght400_GRAD0_opsz48.svg" alt="Setting Logo"/>
 
           <span>Settings</span>
         </span>
-      </button>
+        </button>
     </nav>
-  </aside>
+</aside>
 
 
-  <div class="container-body">
+<div class="container-body">
     <div class="recommend-carousel">
-      <div class="recommend-carousel-inner">
-        <div class="recommend-carousel-item active">
-          <div class="recommend-carousel-item-content-head">
-            <div class="recommend-carousel-item-content-img">
-              <img src="./img/16_9.png">
+        <div class="recommend-carousel-inner">
+            <div class="recommend-carousel-item active">
+                <div class="recommend-carousel-item-content-head">
+                    <div class="recommend-carousel-item-content-img">
+                        <img src="./img/16_9.png">
+                    </div>
+                    <div class="recommend-carousel-item-content-title">
+                        標題標題
+                    </div>
+                    <div class="recommend-carousel-item-content">
+                        <p>
+                            文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
+                        <button class="button white-button">手賤?</button>
+                    </div>
+
+                </div>
             </div>
-            <div class="recommend-carousel-item-content-title">
-              標題標題
+            <div class="recommend-carousel-item">
+                <div class="recommend-carousel-item-content-head">
+                    <div class="recommend-carousel-item-content-img">
+                        <img src="./img/16_9.png">
+
+                    </div>
+                    <div class="recommend-carousel-item-content-title">
+                        標題標題
+                    </div>
+                    <div class="recommend-carousel-item-content">
+                        <p>
+                            文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
+                        <button class="button white-button">手賤?</button>
+                    </div>
+                </div>
             </div>
-            <div class="recommend-carousel-item-content">
-              <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
-              <button class="button white-button">手賤?</button>
+            <div class="recommend-carousel-item">
+                <div class="recommend-carousel-item-content-head">
+                    <div class="recommend-carousel-item-content-img">
+                        <img src="./img/16_9.png">
+
+                    </div>
+                    <div class="recommend-carousel-item-content-title">
+                        標題標題
+                    </div>
+                    <div class="recommend-carousel-item-content">
+                        <p>
+                            文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
+                        <button class="button white-button">手賤?</button>
+                    </div>
+                </div>
+            </div>
+            <div class="recommend-carousel-item">
+                <div class="recommend-carousel-item-content-head">
+                    <div class="recommend-carousel-item-content-img">
+                        <img src="./img/16_9.png">
+
+                    </div>
+                    <div class="recommend-carousel-item-content-title">
+                        標題標題
+                    </div>
+                    <div class="recommend-carousel-item-content">
+                        <p>
+                            文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
+                        <button class="button white-button">手賤?</button>
+                    </div>
+                </div>
             </div>
 
-          </div>
         </div>
-        <div class="recommend-carousel-item">
-          <div class="recommend-carousel-item-content-head">
-            <div class="recommend-carousel-item-content-img">
-              <img src="./img/16_9.png">
-
-            </div>
-            <div class="recommend-carousel-item-content-title">
-              標題標題
-            </div>
-            <div class="recommend-carousel-item-content">
-              <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
-              <button class="button white-button">手賤?</button>
-            </div>
-          </div>
-        </div>
-        <div class="recommend-carousel-item">
-          <div class="recommend-carousel-item-content-head">
-            <div class="recommend-carousel-item-content-img">
-              <img src="./img/16_9.png">
-
-            </div>
-            <div class="recommend-carousel-item-content-title">
-              標題標題
-            </div>
-            <div class="recommend-carousel-item-content">
-              <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
-              <button class="button white-button">手賤?</button>
-            </div>
-          </div>
-        </div>
-        <div class="recommend-carousel-item">
-          <div class="recommend-carousel-item-content-head">
-            <div class="recommend-carousel-item-content-img">
-              <img src="./img/16_9.png">
-
-            </div>
-            <div class="recommend-carousel-item-content-title">
-              標題標題
-            </div>
-            <div class="recommend-carousel-item-content">
-              <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
-              <button class="button white-button">手賤?</button>
-            </div>
-          </div>
-        </div>
-
-      </div>
     </div>
 
     <span>綜合排名</span>
     <hr>
 
     <div class="row">
-      <div class="col-sm">
-        <div class="store-ranking-content">
-          <img src="./img/16_9.png">
-          <span class="store-ranking-conten-span">新海城</span>
-          <p>新海城</p>
+        <div class="col-sm">
+            <div class="store-ranking-content">
+                <img src="./img/16_9.png">
+                <span class="store-ranking-conten-span">新海城</span>
+                <p>新海城</p>
+            </div>
         </div>
-      </div>
-      <div class="col-sm">
-        <div class="store-ranking-content">
-          <img src="./img/16_9.png">
-          <span class="store-ranking-conten-span">新海城</span>
-          <p>新海城</p>
+        <div class="col-sm">
+            <div class="store-ranking-content">
+                <img src="./img/16_9.png">
+                <span class="store-ranking-conten-span">新海城</span>
+                <p>新海城</p>
+            </div>
         </div>
-      </div>
-      <div class="col-sm">
-        <div class="store-ranking-content">
-          <img src="./img/16_9.png">
-          <span class="store-ranking-conten-span">新海城</span>
-          <p>新海城</p>
+        <div class="col-sm">
+            <div class="store-ranking-content">
+                <img src="./img/16_9.png">
+                <span class="store-ranking-conten-span">新海城</span>
+                <p>新海城</p>
+            </div>
         </div>
-      </div>
-      <div class="col-sm">
-        <div class="store-ranking-content">
-          <img src="./img/16_9.png">
-          <span class="store-ranking-conten-span">新海城</span>
-          <p>新海城</p>
+        <div class="col-sm">
+            <div class="store-ranking-content">
+                <img src="./img/16_9.png">
+                <span class="store-ranking-conten-span">新海城</span>
+                <p>新海城</p>
+            </div>
         </div>
-      </div>
-      <div class="col-sm">
-        <div class="store-ranking-content">
-          <img src="./img/16_9.png">
-          <span class="store-ranking-conten-span">新海城</span>
-          <p>新海城</p>
+        <div class="col-sm">
+            <div class="store-ranking-content">
+                <img src="./img/16_9.png">
+                <span class="store-ranking-conten-span">新海城</span>
+                <p>新海城</p>
+            </div>
         </div>
-      </div>
-      <div class="col-sm">
-        <div class="store-ranking-content">
-          <img src="./img/16_9.png">
-          <span class="store-ranking-conten-span">新海城</span>
-          <p>新海城</p>
+        <div class="col-sm">
+            <div class="store-ranking-content">
+                <img src="./img/16_9.png">
+                <span class="store-ranking-conten-span">新海城</span>
+                <p>新海城</p>
+            </div>
         </div>
-      </div>
     </div>
 
     <span>分類</span>
     <hr>
 
     <div class="row row-cols-6">
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
-      <div class="col">
-        <button class="button bg-button">手賤?</button>
-      </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
+        <div class="col">
+            <button class="button bg-button">手賤?</button>
+        </div>
     </div>
 
 
-
-  </div>
+</div>
 
 
 </body>
